Fix menu link contrast

--- a/css/style.css
+++ b/css/style.css
@@ -422,6 +422,7 @@ footer {
 
     #nav-menu a {
         font-size: 1.5rem;
+        color: #f0f0f0;
     }
 
     .dark-mode-toggle {
